@@ -23,6 +23,10 @@ public class TestCapture {
 		Capture capture = new Capture();
 		capture.setCnpTxnId(123456000L);
 		capture.setAmount(106L);
+		PartialCapture pc=new PartialCapture();
+		pc.setPartialCaptureSequenceNumber(1);
+		pc.setPartialCaptureTotalCount(7);
+		capture.setPartialCapture(pc);
 		capture.setPayPalNotes("Notes");
 		capture.setId("id");
 
@@ -123,8 +127,8 @@ public class TestCapture {
 		passengerTransportData.setCreditReasonIndicator(CreditReasonIndicatorEnum.C);
 		passengerTransportData.setTicketChangeIndicator(TicketChangeIndicatorEnum.C);
 		passengerTransportData.setTicketIssuerAddress("IssuerAddress");
-		passengerTransportData.setExchangeAmount(new Long(110));
-		passengerTransportData.setExchangeFeeAmount(new Long(112));
+		passengerTransportData.setExchangeAmount(Long.valueOf(110));
+		passengerTransportData.setExchangeFeeAmount(Long.valueOf(112));
 		passengerTransportData.setExchangeTicketNumber("ExchangeNumber");
 		passengerTransportData.getTripLegDatas().add(addTripLegData());
 		return  passengerTransportData;
@@ -196,6 +200,29 @@ public class TestCapture {
 		capture.setId("id");
 
 		CaptureResponse response = cnp.capture(capture);
+		assertEquals("Approved", response.getMessage());
+		assertEquals("sandbox", response.getLocation());
+	}
+
+	//v12.41 changes to test identityBundle
+	@Test
+	public void captureWithIdentityBundle() throws Exception {
+		Capture capture = new Capture();
+		capture.setCnpTxnId(123456000L);
+		capture.setAmount(106L);
+		capture.setId("id");
+		IdentityBundle identityBundle = new IdentityBundle();
+		identityBundle.setMerchantId("12222");
+		identityBundle.setEntityId("222222");
+		identityBundle.setEntityReference("32222");
+		identityBundle.setResourceId("422222");
+		identityBundle.setResourceReference("52222");
+		identityBundle.setCommandId("6222");
+		identityBundle.setCommandReference("72222");
+		identityBundle.setOrderReference("82222");
+		capture.setIdentityBundle(identityBundle);
+		CaptureResponse response = cnp.capture(capture);
+		assertEquals(response.getMessage(), "000", response.getResponse());
 		assertEquals("Approved", response.getMessage());
 		assertEquals("sandbox", response.getLocation());
 	}
